<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.ascrossgams.myapplication.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_sources"
        android:name="com.ascrossgams.myapplication.ui.sources.SourcesFragment"
        android:label="@string/menu_sources"
        tools:layout="@layout/fragment_sources" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.ascrossgams.myapplication.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ascrossgams.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.ascrossgams.myapplication.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.ascrossgams.myapplication.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>